--- a/lab2.html
+++ b/lab2.html
@@ -3,7 +3,7 @@
 <title>Home</title>
 </head>
 <body>
-Hi, my name is <em> Nabil </em>.
+Hi, my name is <em> ahmed </em>.
 Here are my assignments:
 <br>
 <ul>
