--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <title>Home</title>
 </head>
 <body>
-<p>this is my <em>Home page</em></p>
+Hi, my name is <em> ahmed </em>.
+Here are my assignments:
+<br>
+<ul>
+<li> <a href="./assign1.html"> assignment 1 </a> </li>
+<li> <a href="./assign2.html"> assignment 2 </a> </li>
+<li> <a href="./assign3.html"> assignment 2 </a> </li>
+</ul>
 </body>
 </html>
