--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 </head>
 <body>
 Hi, my name is <em> ahmed </em>.
-Here are my assignments:
+Here are my labs:
 <br>
-<ul>
-<li> <a href="./assign1.html"> assignment 1 </a> </li>
-<li> <a href="./assign2.html"> assignment 2 </a> </li>
-<li> <a href="./assign3.html"> assignment 2 </a> </li>
-</ul>
+<ol>
+<li> <a href="labs/lab2.html"> lab2 </a> </li>
+</ol>
 </body>
 </html>
