--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ Here are my labs:
 <br>
 <ol>
 <li> <a href="labs/lab2.html"> lab3 </a> </li>
+<li> <a href="labs/lab4/lab4.html"> lab4 </a> </li>
+
 </ol>
 </body>
 </html>
