--- a/labs/lab4/cities/vancouver.html
+++ b/labs/lab4/cities/vancouver.html
@@ -7,7 +7,7 @@ Vancouver About this soundlisten)) is a major city in western Canada, located in
   </p>
   <hr>
    <a href="../images/vancouver1.jfif" target="_blank">
-     <img src="../images/vancouver1_thum.jfif" width="100" height="100">
+     <img src="../images/vancouver1_thum.jfif" width="100" height="100" alt="this image was suppose to be a birdview of vancouver city">
    </a>
   <hr>
    <a href="../images/vancouver2.jfif" target="_blank">
