--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <html>
 <head>
 <title>Home</title>
+<link rel="styling" href="look/styling.css"> </link>
 </head>
 <body>
-Hi, my name is <em> ahmed </em>.
-<em>About Me:</em>
+<h1>Hi, my name is <em> ahmed </em>.</h1>
+<em id="darkem">About Me:</em>
 <p>
   Hi my name is ahmed and I'm 20 years old. I'm currently styding at colombia College as UT student <em>(university transfer program)</em>
-  I'm from <em> Tunisia </em>
-
+  I'm from <em class="redem"> Tunisia </em>,north african country. I speack three languages: French, English and Arabic.
 </p>
+<hr>
+<a href="look/mypic.jfif" target="_blank">
+  <img src="look/mypic_thum.jfif" width="300" height="350">
+</a>
 <br>
 <ol>
+<h2>Here Are My Labs And Assignments:</h2>
 <li> <a href="labs/lab2.html"> lab3 </a> </li>
 <li> <a href="labs/lab4/lab4.html"> lab4 </a> </li>
 <li> <a href="labs/lab 5/lab5.html"> lab5 </a> </li>
-
-
 </ol>
 </body>
 </html>
