--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Home</title>
-<link rel="styling" href="look/styling.css"> </link>
+<link rel="stylesheet" href="look/styling.css"> </link>
 </head>
 <body>
 <h1>Hi, my name is <em> ahmed </em>.</h1>
@@ -20,6 +20,7 @@
 <li> <a href="labs/lab2.html"> lab3 </a> </li>
 <li> <a href="labs/lab4/lab4.html"> lab4 </a> </li>
 <li> <a href="labs/lab 5/lab5.html"> lab5 </a> </li>
+<li> <a href="labs/lab 6/lab6.html"> lab6 </a> </li>
 </ol>
 </body>
 </html>
