--- a/labs/lab 5/lab5.html
+++ b/labs/lab 5/lab5.html
@@ -24,5 +24,6 @@
       </ul>
     </li>
   </ul>
+  <a href="C:\Users\ahmed\Desktop\html codes\csci165\index.html"> go back Home! </a> 
 </body>
 </html>
