--- a/labs/lab4/lab4.html
+++ b/labs/lab4/lab4.html
@@ -5,6 +5,7 @@
  <ul>
   <li> <a href="./cities/vancouver.html"> vancouver </a> </li>
   <li> <a href="./cities/toronto.html"> toronto </a> </li>
+  <a href="C:\Users\ahmed\Desktop\html codes\csci165\index.html"> go back Home! </a>
  </ul>
 </body>
 </html>
