--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 </a>
 <br>
 <ol>
-<h2>Here Are My Labs And Assignments:</h2>
+<em id="second_sub">Here Are My Labs And Assignments:</em>
+<br>
 <li> <a href="labs/lab2.html"> lab3 </a> </li>
 <li> <a href="labs/lab4/lab4.html"> lab4 </a> </li>
 <li> <a href="labs/lab 5/lab5.html"> lab5 </a> </li>
