--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <li> <a href="labs/lab 5/lab5.html"> lab5 </a> </li>
 <li> <a href="labs/lab 6/lab6.html"> lab6 </a> </li>
 <li> <a href="labs/lab 7/lab7.html"> lab7 </a> </li>
+<li> <a href="labs/lab 8/lab8.html"> lab8 </a> </li>
 </ol>
 </body>
 </html>
