--- a/labs/lab 9/lab9.html
+++ b/labs/lab 9/lab9.html
@@ -13,7 +13,7 @@
       color: DodgerBlue;
       font-variant: small-caps;
     }
-    #secondpar{
+    #secondpar::first-line{
       color: MediumSeaGreen;
       font-variant: small-caps;
     }
@@ -22,15 +22,15 @@
 <body>
   <div class="firstclass">
     <h1> Title 1</h1>
-    <p>
-    <span id="firstpar"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span> Aenean ornare malesuada convallis. Quisque ligula eros, viverra nec nisi at, sodales suscipit elit.
+    <p >
+     <span id="firstpar">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>  Aenean ornare malesuada convallis. Quisque ligula eros, viverra nec nisi at, sodales suscipit elit.
       Fusce eget odio quis orci rutrum consequat. Curabitur ut felis vel ante efficitur posuere. Donec tristique mollis congue. Quisque imperdiet et nulla ut mollis.
       Phasellus ut lorem mauris. Fusce vulputate facilisis lorem, a vehicula risus semper et. Mauris nunc nisi, egestas id vehicula et, gravida eget lacus.</p>
   </div>
   <div class="secondclass">
     <h2> Title 2</h2>
-    <p>
-    <span id="secondpar">Nullam in condimentum libero. Sed eget faucibus lectus, eu laoreet arcu.</span>Vestibulum pellentesque tempor dapibus. Proin convallis, nibh ut porttitor molestie, turpis sapien vestibulum dui, a luctus sem diam ut odio. Integer vehicula ac lacus non rutrum. Phasellus placerat elit sed nulla tempor, vel cursus urna porta. Aliquam erat volutpat.
+    <p <span id="secondpar">
+    Nullam in condimentum libero. Sed eget faucibus lectus, eu laoreet arcu.Vestibulum pellentesque tempor dapibus. Proin convallis, nibh ut porttitor molestie, turpis sapien vestibulum dui, a luctus sem diam ut odio. Integer vehicula ac lacus non rutrum. Phasellus placerat elit sed nulla tempor, vel cursus urna porta. Aliquam erat volutpat.
       Vestibulum cursus tortor turpis, id cursus nisi tempor sed. Praesent nec magna nisl.
     </p>
   </div>
