--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <li> <a href="labs/lab 7/lab7.html"> lab7 </a> </li>
 <li> <a href="labs/lab 8/lab8.html"> lab8 </a> </li>
 <li> <a href="labs/lab 9/lab9.html"> lab9 </a> </li>
+<li> <a href="labs/lab 10/lab10.html"> lab10 </a> </li>
 </ol>
 </body>
 </html>
