--- a/labs/lab 11/lab11.html
+++ b/labs/lab 11/lab11.html
@@ -12,10 +12,10 @@
     <li><p>this is a good way to <sub>subscript</sub> a text</p></li>
     <li><p>this is a good way to <sup>superscript</sup> a text</p></li>
     <li><pre>preformatted text</pre></li>
-    <li><p>Be not afraid of greatness.<br>
-Some are born great,<br>
-some achieve greatness,<br>
-and others have greatness thrust upon them.</p></li>
+    <li><pre>Be not afraid of greatness.
+Some are born great,
+some achieve greatness,
+and others have greatness thrust upon them.</pre></li>
   </ul>
 
 </body>
