--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
 <link rel="stylesheet" href="look/styling.css"> </link>
 </head>
 <body>
+<div id="header">
 <h1>Hi, my name is <em> ahmed </em>.</h1>
-<em id="darkem">About Me:</em>
+</div>
+<div id="list">
+<h1 id="darkem">About Me:</h1>
+<a href="look/mypic.jfif" target="_blank">
+  <img src="look/mypic_thum.jfif" alt="" style= "float: right; width:200px;height:300px;margin-left:10px;">
+</a>
 <p>
   Hi my name is ahmed and I'm 20 years old. I'm currently styding at colombia College as UT student <em>(university transfer program)</em>
   I'm from <em class="redem"> Tunisia </em>,north african country. I speack three languages: French, English and Arabic.
 </p>
-<hr>
-<a href="look/mypic.jfif" target="_blank">
-  <img src="look/mypic_thum.jfif" width="300" height="350">
-</a>
-<br>
+
+</div>
+<div id="list1">
+  <div id="list2">
 <ol>
-<em id="second_sub">Here Are My Labs And Assignments:</em>
-<br>
+<h2 id="second_sub">Labs And Assignments:</h2>
 <li> <a href="labs/lab2.html"> lab3 </a> </li>
 <li> <a href="labs/lab4/lab4.html"> lab4 </a> </li>
 <li> <a href="labs/lab 5/lab5.html"> lab5 </a> </li>
@@ -28,5 +32,10 @@
 <li> <a href="labs/lab 10/lab10.html"> lab10 </a> </li>
 <li> <a href="labs/lab 11/lab11.html"> lab11 </a> </li>
 </ol>
+</div>
+<div id="header2">
+  <h1>Welcome</h1>
+
+</div>
 </body>
 </html>
