--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <li> <a href="labs/lab 9/lab9.html"> lab9 </a> </li>
 <li> <a href="labs/lab 10/lab10.html"> lab10 </a> </li>
 <li> <a href="labs/lab 11/lab11.html"> lab11 </a> </li>
+<li> <a href="labs/lab 12/lab12.html"> lab12 </a> </li>
 </ol>
 </div>
 <div id="header2">
