--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <li> <a href="labs/lab 10/lab10.html"> lab10 </a> </li>
 <li> <a href="labs/lab 11/lab11.html"> lab11 </a> </li>
 <li> <a href="labs/lab 12/lab12.html"> lab12 </a> </li>
+<li> <a href="labs/lab 13/lab13.html"> lab13 </a> </li>
 </ol>
 </div>
 <div id="header2">
