--- a/labs/lab 13/lab13.html
+++ b/labs/lab 13/lab13.html
@@ -51,16 +51,15 @@
   </ul>
   <p>2.Display a list of links as block elements : </p>
 
-    <li class="blockStyle"><a href="https://www.w3schools.com/html/default.asp/">HTML reference
+    <a class="blockStyle" href="https://www.w3schools.com/html/default.asp/">HTML reference
     </a>
     </li>
-    <li class="blockStyle"><a href="https://www.w3schools.com/css/default.asp/">CSS reference
+    <a class="blockStyle" href="https://www.w3schools.com/css/default.asp/">CSS reference
+    </a>
+    <a class="blockStyle" href="https://www.w3schools.com/js/default.asp/">JAVASCRIPT reference
     </a>
     </li>
-    <li class="blockStyle"><a href="https://www.w3schools.com/js/default.asp/">JAVASCRIPT reference
-    </a>
-    </li>
-  
+
   <h1 class="hidden">random</h1>
   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
   Ut vel dui vitae felis <span class="inlineBlock">facilisis varius.</span> Suspendisse potenti. Curabitur eu consectetur elit, finibus volutpat odio. Integer dictum, quam at luctus luctus,
