--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 <li> <a href="labs/lab 11/lab11.html"> lab11 </a> </li>
 <li> <a href="labs/lab 12/lab12.html"> lab12 </a> </li>
 <li> <a href="labs/lab 13/lab13.html"> lab13 </a> </li>
+<li> <a href="labs/lab 14/lab14.html"> lab14 </a> </li>
+<li> <a href="labs/lab 15/lab15.html"> lab15 </a> </li>
 </ol>
 </div>
 <div id="header2">
