--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <li> <a href="labs/lab 13/lab13.html"> lab13 </a> </li>
 <li> <a href="labs/lab 14/lab14.html"> lab14 </a> </li>
 <li> <a href="labs/lab 15/lab15.html"> lab15 </a> </li>
+<li> <a href="labs/lab 16/lab16.html"> lab16 </a> </li>
 </ol>
 </div>
 <div id="header2">
