--- a/labs/lab 15/lab15.html
+++ b/labs/lab 15/lab15.html
@@ -28,6 +28,7 @@
   <<h2>History</h2>
   <button id="show_button">show</button>
   <button id="hide_button">hide</button>
+  <button id="clear_button"> CLEAR</button>
   <div id="history"> </div>
 
 </body>
